# cosine

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  test_encoder_attention.py  test_encoder_simple.py  test_pipet_core.py  test_pipet_pipeline.py  train.sh
.claude/commands/: cleanup-runs.md  fold.md
checkpoints/: README.md
configs/: train.yaml
configs/callbacks/: default.yaml  grad_norm.yaml  peint.yaml  tqdm_progress_bar.yaml  val_likelihood.yaml
configs/data/: plmr.yaml
configs/experiment/: finetune_peint_on_cherries.yaml  train_codon_model.yaml  train_ctmc_model.yaml  train_ctmc_model_jaffe.yaml  train_ctmc_model_on_dasm.yaml  train_ctmc_model_rosetta.yaml  train_lept_model.yaml  train_peint.yaml  train_vae.yaml  (+3 more)
data/: .gitignore  README.md  aho.ipynb  cml.py  dasm.ipynb  dasm.py  oas.py  wyatt.ipynb  wyatt.py
docs/: ANTIBODY_METHODS_SUMMARY.md  PEINT_vs_PIPET_Analysis.md  README.md  assemble_random_germline_antibody.md  batched_sampling.md  ctmc_guidance.md  peint.md  tag_implementation.md  tree_sampling_batched_implementation.md
experiments/: eval_model.py  finetune_esm.py  train_model.py
notebooks/: codon_model.ipynb  dasm_analysis.ipynb  eda_wyatt.ipynb  eval_codon_model.ipynb  eval_consistency.ipynb  eval_ctmc_model.ipynb  eval_dasm.ipynb  eval_lept.ipynb  eval_lept_model.ipynb  eval_lept_v0.ipynb  eval_peint_model.ipynb  eval_peint_og.ipynb  eval_peint_on_koenig.ipynb  eval_peint_v0.ipynb  eval_peint_v1.ipynb  eval_ppl.ipynb  eval_vae_model.ipynb  lept_model.ipynb  peint_eval_on_koenig.ipynb  peint_inference.ipynb  sample_dasm.ipynb  sample_on_tree.ipynb  sample_thrifty.ipynb  validate_indels.ipynb  zero_shot.ipynb
scripts/: README_oracle_evolution.md  cleanup_failed_runs.py  infer_mutations.py  oracle_guided_evolution.py  sample_from_ctmc_model.py  sample_on_tree.py  validate_new_ckpt.py  validate_old_ckpt.py
tests/: test_encoder_attention.py  test_encoder_simple.py  test_generative_metrics.py  test_pipet_core.py  test_pipet_pipeline.py
(+133 files in other folders)
